user endpoints and docs finished
